# krakatoa_2

./: .gitignore  copy_validation_layers.ps1  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/geronimodesenvolvimentos/krakatoa/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: VkLayer_khronos_validation.json
app/src/main/assets/shaders/: camera_bg.frag.glsl  camera_bg.frag.spv  camera_bg.vert.glsl  camera_bg.vert.spv  compile_shaders.py  compose.frag.glsl  compose.frag.spv  compose.vert.glsl  compose.vert.spv  deprojection.comp.glsl  offscreen_composite.frag.glsl  offscreen_composite.vert.glsl  transparent_phong.frag.glsl  transparent_phong.frag.spv  transparent_phong.vert.glsl  transparent_phong.vert.spv  unshaded_opaque.frag.spv  unshaded_opaque.vert.glsl  unshaded_opaque.vert.spv
app/src/main/cpp/: CDO.h  CMakeLists.txt  android_log.h  ar_camera_image.cpp  ar_camera_image.h  ar_depth_image.cpp  ar_depth_image.h  ar_loader.h  ar_manager.cpp  ar_manager.h  ar_plane.cpp  ar_plane.h  asset_loader.cpp  asset_loader.h  cdo.cpp  command_pool_manager.cpp  command_pool_manager.h  compute_pipeline.cpp  compute_pipeline.h  concatenate.h  depth_deprojection_config.cpp  depth_deprojection_config.h  egl_dummy_context.cpp  egl_dummy_context.h  frame_sync.cpp  frame_sync.h  frame_timer.cpp  frame_timer.h  image_load.cpp  image_load.h  mesh.h  mesh_loader.cpp  mesh_loader.h  mutable_mesh.cpp  mutable_mesh.h  native-lib.cpp  offscreen_render_pass.cpp  offscreen_render_pass.h  pipeline.cpp  pipeline.h  (+24 more)
app/src/main/java/dev/geronimodesenvolvimentos/krakatoa/: MainActivity.kt  VulkanSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/geronimodesenvolvimentos/krakatoa/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
